# Sonos-Controller

./: .gitignore  Cargo.toml  README.md  SonosBoxes.config
src/: main.rs
web/: index.html
web/rsc/: scr.js  style.css
