[package]
name = "sonos_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = "4.0"
chrono = "0.4"
clap = "3.1"
confy = "0.4"
env_logger = "0.9"
ipnetwork = "0.18"
log = "0.4"
pnet = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonor = "1.1"
tokio = { version = "1.17", features = ["full"] }
